# unipoly

./: .gitignore  .gitlab-ci.yml  BugBounty.md  Makefile  README.md  RULES.md  do_tests.sh  dune  dune-project  square.mli  unipoly.opam
_build/: .db  .digest-db  log
_build/default/: board.ml  dune  main.ml  square.ml
_build/default/.dune/: configurator  configurator.v2
_build/default/.main.eobjs/: dune__exe.ml-gen
_build/default/.main.eobjs/byte/: dune__exe.cmi  dune__exe.cmo  dune__exe.cmt  dune__exe__Main.cmi  dune__exe__Main.cmo  dune__exe__Main.cmt
_build/default/.main.eobjs/native/: dune__exe.cmx  dune__exe__Main.cmx
_build/default/.merlin-conf/: exe-main
lib/: board.ml  board.mli  card.ml  card.mli  deck.ml  dune  error.ml  game.ml  game.mli  player.ml  player.mli  property.ml  property.mli  square.ml  square.mli
test/: dune  test_card.ml  test_deck.ml  test_game.ml  test_player.ml  test_property.ml  test_square.ml
